--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,27 @@ header {
         text-align: left;
     }
 
+    #table-val-tcc .val-textarea td {
+        border-right: solid 1px #000;
+        border-left: solid 1px #000;
+        text-align: left;
+    }
+
+    #table-val-tcc .val-textarea td label {
+        display: block;
+        margin: 5px;
+    }
+
+    #table-val-tcc .val-textarea td textarea {
+        width: 820px;
+        height: 300px;
+        margin: 5px;
+    }
+
+    #div-submit input {
+        margin: 5px;
+    }
+
     #table-val-tcc tr td label {
         margin: 5px;
         font-size: 14px;
